of state directories. If you upgrade an existing installation you have
to at least migrate the user database and optionally move your state
directories to the new locations.

With the restructuring of the user database *all* existing installations
need to update their user database before they can use the new version.
Please backup all your state data and the MiG-users.db and run
cd mig/server
./fix_user_db.py CONF_PATH DB_PATH
which in most cases will be
./fix_user_db.py ./MiGserver.conf MiG-users.db

to automatically upgrade all your MiG user directories and the database.
You also need to update your apache MiG configuration to map SSL
certificates to the new user dirs.
If you choose to switch to the new relocatable state directory layout
you also need to update your MiGserver.conf and move the state
directories around.
Please refer to the example apache and MiGserver confs or use the config
generator to achieve this.


=== May 1st, 2009 ===
We finally got the old grey web pages completely overhauled. Thanks to those of you 
that contributed to this often overlooked area.
Updated setup helpers to make custom install locations easier.


=== March 17, 2009 ===
Added this file for easier tracking of changes. Another bugfixing
release (1.0.2), so we recommend that everyone upgrades to this version.


=== March 06, 2009 ===
After a long time in planning we finally released the project under the
GPL v2 today. The project started all the way back in 2003, so there's
already quite a bit of code and the setup is not trivial. Over the
coming months we will improve the code and instructions to ease setup
for other users.


== Changelogs ==
More detailed changelogs for the public releases.

== 1.1.0 ==
-reworked user ID structure to avoid collissions when users with same
full name exist
-moved state directories to improve relocation support
-more relocatable installation with e.g. MIG_CONF environment
-users can now request scheduling information