@@ -6,7 +6,7 @@
 <title>
 Minimum intrusion Grid
 </title>
-<meta http-equiv="refresh" content="0;url=/cgi-bin/submitjob.py">
+<meta http-equiv="refresh" content="0;url=/cgi-bin/dashboard.py">
 </HEAD>
 <body>
 </body>
